<resources>
    <string name="app_name">AdWise</string>
    <string name="user_name">User Name</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="password_empty">Password is required</string>
    <string name="user_name_empty">Username is required</string>
    <string name="login_failed">Login failed check credentials</string>
    <string name="restapi_base_url">http://50.18.97.249:8080</string>
    <string name="restapi_signup">/user</string>
    <string name="restapi_login">/user/login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="offers">Offers</string>
    <string name="search">Search</string>
    <string name="favorites">Favorite</string>
    <string name="profile">Profile</string>
    <string name="adwise_shared_preferences">adwise_data</string>
    <string name="adwise_monitoring_identifier">adwise</string>
    <string name="get_location_id">/map/</string>
    <string name="rest_api_spots">/spots</string>
    <string name="restapi_map">/map/</string>

    <string name="history_timer">50</string>
    <string name="restapi_history">/history</string>
    <string name="google_app_id">AIzaSyAVxRK3ofgIqTlSM7w2uNWtKP8ahhJA9KU</string>
    <string name="you_are_here">You are here!</string>
    <string name="rest_api_favorites">/favorite/</string>
    <string name="logout">Logout</string>
    <string name="profile_pic">profilepic</string>
    <string name="username">userName</string>
    <string name="timer">--:--</string>
    <string name="coupon_description">Coupon Description</string>
    <string name="no_coupon">Sorry no coupon</string>
</resources>
