<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/offers"
        android:id="@+id/offers"
        android:icon="@drawable/ic_loyalty_white_24dp"
        android:showAsAction="always"
        />
    <item
        android:title="@string/search"
        android:id="@+id/search"
        android:icon="@drawable/ic_search_white_24dp"
        android:showAsAction="always"
        />

    <item
        android:title="@string/favorites"
        android:id="@+id/favorites"
        android:icon="@drawable/ic_favorite_white_24dp"
        android:showAsAction="always"
        />

    <item
        android:title="@string/profile"
        android:id="@+id/profile"
        android:icon="@drawable/ic_person_white_24dp"
        android:showAsAction="always"
        />
</menu>