<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:id="@+id/signup_layout">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        android:layout_centerHorizontal="true"/>
    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:inputType="textEmailAddress"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/logo"/>
    <EditText
        android:id="@+id/password"
        android:layout_below="@id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword"
        android:hint="@string/password"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_error"
        android:layout_below="@id/password"
        android:visibility="gone"
        android:text="@string/login_failed"
        android:textColor="@color/red"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signup_new_user"
        android:layout_below="@id/login_error"
        android:layout_centerHorizontal="true"
        android:text="@string/signup"/>
</RelativeLayout>