<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:layout_centerInParent="true"
    tools:context="com.learninghorizon.adwise.LoginSignup"
    android:gravity="center">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        android:id="@+id/application_icon"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/user_name"
        android:inputType="textEmailAddress"
        android:layout_below="@id/application_icon"
        android:hint="@string/user_name"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_below="@id/user_name"
        android:hint="@string/password"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:layout_below="@id/password">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/login"
            android:text="@string/login"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:typeface="sans"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/signup"
            android:layout_toRightOf="@id/login"
            android:layout_marginLeft="20dp"
            android:text="@string/signup"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:typeface="sans"
            />
    </LinearLayout>

</RelativeLayout>
